# toxic-tweets-ptbr-qwen3

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
data/full/: toldBr_eval.csv  toldBr_train.csv  toldBr_val.csv
data/raw/: toldBr_full.csv
data/sample/: toldBr_sample_500.csv
notebooks/: 01_exploratory_analysis.ipynb  02_sampling.ipynb  02b_prepare_full_eval.ipynb  03_ollama_setup.ipynb  04_zero_shot_v1_base.ipynb  04_zero_shot_v2_descriptions.ipynb  04_zero_shot_v3_no_antibias.ipynb  05_few_shot_v1_1ex.ipynb  05_few_shot_v2_2ex_antibias.ipynb  05_few_shot_v3_2ex.ipynb  06_results_analysis.ipynb  07_zero_shot_full_v1_base.ipynb  07_zero_shot_full_v2_descriptions.ipynb  07_zero_shot_full_v3_no_antibias.ipynb  08_few_shot_full_v1_1ex.ipynb  08_few_shot_full_v2_2ex_antibias.ipynb  08_few_shot_full_v3_2ex.ipynb  09_results_analysis_full.ipynb  10_rag_data_split.ipynb  13_rag_results_analysis.ipynb  16_rag_results_analysis.ipynb
results/: few_shot_v1_1ex.csv  few_shot_v2_2ex_antibias.csv  few_shot_v3_2ex.csv  metrics_per_strategy.csv  metrics_summary.json  predictions_comparison.csv  zero_shot_v1_base.csv  zero_shot_v2_descriptions.csv  zero_shot_v3_no_antibias.csv
scripts/: 07_zero_shot_full_v1_base.py  07_zero_shot_full_v2_descriptions.py  07_zero_shot_full_v3_no_antibias.py  08_few_shot_full_v1_1ex.py  08_few_shot_full_v2_2ex_antibias.py  08_few_shot_full_v3_2ex.py  10_rag_bm25_full.py  11_rag_vector_full.py  12_rag_hybrid_qdrant_full.py  13_rag_diverse_bm25_full.py  14_rag_diverse_vector_full.py  15_rag_diverse_hybrid_full.py
(+14 files in other folders)
