[project]
name = "toxic-tweets-ptbr-qwen3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "qdrant-client>=1.17.1",
    "rank-bm25>=0.2.2",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.4.1",
]
